# better-photo-renamer

./: .gitignore  README.md  app_config.yml  better_renamer.py  pyproject.toml  reset_namming.py
app/: __main__.py  container.py  window.py
app/commands/: __init__.py  command.py  print_command.py
app/sections/: __init__.py  bottom_bar_section.py  config_section.py  files_section.py  toolbar_section.py
app/services/: command_service.py
better_photo_renamer/: __main__.py  parser.py
metadata_doctor/: __main__.py  parser.py
src/: __main__.py  apply_changes.py  cache.py  load_dir.py  load_metadata.py  parser.py  rename_files.py
src/accessors/: __init__.py  metadata_accessor.py
src/file_operator/: __init__.py  file_operator.py
src/generate_filename/: __init__.py  filename_transformer.py  generate_filename.py  generate_path.py  grammar.py  live_photos.py  tag_fn.py  tag_fn_wrapper.py
src/grouping/: grammar.py  grouping.py  grouping_methods.py  grouping_transformer.py  parse_grouping_args.py
src/metadata_extractor/: __init__.py  create_metadata_extractor.py  metadata.py  metadata_extractor.py  metadata_extractor_image.py  metadata_extractor_mov.py
src/utils/: datetime.py  df.py  errors.py  exif.py  hash.py  input.py
